# coscience

./: .gitattributes  CLAUDE.md  Dockerfile  docker-compose.yml  pyproject.toml
docs/: initial_specs.md  revisions-01.md
frontend/: .gitignore  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  api.test.ts  api.ts  auth.tsx  main.tsx  sprintActions.test.ts  sprintActions.ts  styles.css  theme.ts  vite-env.d.ts
scripts/: deploy.sh
src/coscience/: artifacts.py  auth.py  chat_agent.py  claude_executor.py  cli.py  dispatcher.py  executor.py  (+19 more)
tests/: conftest.py  test_artifact_archive.py  test_artifact_instructions.py  test_artifact_lock.py  test_artifact_models.py  test_artifact_sprint_fields.py  test_artifact_sprint_helpers.py  test_artifact_submit.py  test_artifact_substrate.py  test_artifact_tree.py  test_artifact_versioning.py  test_artifact_work_list.py  test_attribution_flow.py  test_attribution_model.py  test_auth_cookie.py  test_auth_registry.py  test_chat_agent.py  test_chat_artifacts_field.py  test_chat_bound_create.py  test_chat_bound_turn.py  test_chat_reaper_routes.py  test_chat_save_release.py  test_claude_executor.py  test_cli.py  test_cli_dispatch.py  test_cli_pm.py  test_cli_program.py  test_container_files.py  test_detached.py  test_detached_tokens.py  test_dispatcher.py  test_dispatcher_artifacts.py  test_dispatcher_hibernate.py  test_dispatcher_preempt_kill.py  test_dispatcher_reconcile.py  test_executor.py  test_feedback_harvest.py  test_frontmatter_io.py  test_graph_core.py  test_graph_demote.py  (+83 more)
(+68 files in other folders)
