[project]
name = "coscience"
version = "0.0.0"
description = "Co-Science Platform — Phase 0 walking skeleton"
requires-python = ">=3.11"
dependencies = ["pyyaml>=6"]

[project.optional-dependencies]
dev = ["pytest>=8"]
mcp = ["mcp>=1.2"]

[project.scripts]
coscience = "coscience.cli:main"
coscience-mcp = "coscience.mcp_server:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["."]
